2001-06-07  Alan Modra  <amodra@bigpond.net.au>

	* Many files: Update copyright notices.

2001-05-28  Philip Blundell  <philb@gnu.org>

	From 2001-05-11  Jakub Jelinek  <jakub@redhat.com>
	* elf/ia64.h (ELF_STRING_ia64_unwind_once): Define.
	(ELF_STRING_ia64_unwind_info_once): Define.

2001-01-11  Peter Targett  <peter.targett@arccores.com>

	* dis-asm.h (arc_get_disassembler): Correct declaration.

2001-01-09  Philip Blundell  <philb@gnu.org>

	* bin-bugs.h (REPORT_BUGS_TO): Set to `bug-binutils@gnu.org'.

2000-12-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* COPYING: Update to current
	ftp://ftp.gnu.org/pub/gnu/Licenses/COPYING-2.0 (fixes references
	to 19yy as example year in copyright notice).

2000-12-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* dis-asm.h (struct disassemble_info): New member "section".
	(INIT_DISASSEMBLE_INFO_NO_ARCH): Initialize private_data member.
	Initialize section member.

2000-12-16  Herman A.J. ten Brugge  <Haj.Ten.Brugge@net.HCC.nl>

	* safe-ctype.h: Make code work on all targets and not just on
	targets where a char is 8 bits.

2000-12-10  Fred Fish  <fnf@be.com>

	* bfdlink.h (struct bfd_link_info): Add new allow_shlib_undefined
	member to struct for systems where it is normal to have undefined
	symbols in shared libraries at runtime and the runtime linker
	takes care of redirecting them.

2000-12-07  Zack Weinberg  <zack@wolery.stanford.edu>

	* safe-ctype.h: New file.

2000-12-06  Rodney Brown  <RodneyBrown@mynd.com>

	* getopt.h obstack.h: Standarize copyright statement.

2000-12-05  Richard Henderson  <rth@redhat.com>

	* demangle.h: Change "new_abi" to "v3" everywhere.

2000-11-29  Zack Weinberg  <zack@wolery.stanford.edu>

	* libiberty.h: Move #includes to top.  Prototype xmalloc_failed.

2000-11-15  Kenneth Block  <kenneth.block@compaq.com>

	* demangle.h: Add gnat and java demangle styles.

2000-11-04  Hans-Peter Nilsson  <hp@bitrange.com>

	* hashtab.h (struct htab): Add member return_allocation_failure.