@@ -1,3 +1,9 @@
+2001-07-19  David O'Brien  <obrien@FreeBSD.org>
+
+	* emultempl/elf32.em: Do not assuming that contents of the buffer
+	returned from basename function will remain unchanged accross other
+	function calls.
+
 2001-07-19  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* ldlang.c (lang_leave_overlay): If a region is specified assign
