@@ -1,3 +1,7 @@
+2001-07-19  David O'Brien  <obrien@FreeBSD.org>
+
+	* lbasename.c: New file.
+
 2000-12-29  DJ Delorie  <dj@redhat.com>
 
 	* fnmatch.c: Make the note about the origins of this file more
@@ -6,7 +10,7 @@
 	* getopt1.c: Ditto.
 	* md5.c: Ditto.
 	* obstack.c: Ditto.
-
+	
 2000-12-26  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
 
 	* bsearch.c: New file.
